@@ -95,6 +95,9 @@ IN DEVELOPMENT
    * Make sure Repository.fetch(self) is properly a no-op for all
      Repository implementations. (John Arbash Meinel, #158333)
 
+   * Mark .bzr directories as "hidden" on Windows.
+     (Alexander Belchenko, #71147)
+
    * ``merge --uncommitted`` can now operate on a single file.
      (Aaron Bentley, Lukáš Lalinský, #136890)
 
